@@ -60,6 +60,7 @@ Improved Speccy online browser:
 -uses SSL SNI when downloading files
 
 Improved Frameskip algorithm
+Improved Core statistics: Add info about frames drawn & dropped
 Improved Hex Editor: can now be backgrounded
 Improved Debug I/O ports window: can now be backgrounded and it's reloaded continuously
 Improved File spooling: delay can now be any value between 20 and 2000 ms (in increments of +20)
